<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Created by Tri Phan on 7/01/19 8:24 PM
  ~  Copyright (c) 2019 . All rights reserved.
  ~  Last modified 7/01/19 8:24 PM
  -->

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".view.impl.CalibrationActivity"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calib_second_sec"
                android:textSize="@dimen/font_size_heading1"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_weight="1"
                          android:padding="10dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_one_point_title"
                        android:textSize="@dimen/font_size_heading2"
                        android:textStyle="bold"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_one_sample_desc"
                        android:textSize="@dimen/font_size_normal"
                />
            </LinearLayout>

            <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/btn_one_point"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:gravity="center_vertical">
            <LinearLayout android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_weight="1"
                          android:padding="10dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_two_point_title"
                        android:textSize="@dimen/font_size_heading2"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_two_sample_desc"
                        android:textSize="@dimen/font_size_normal"/>
            </LinearLayout>

            <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/btn_two_point"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_weight="1"
                          android:padding="10dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_three_point_title"
                        android:textSize="@dimen/font_size_heading2"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_three_sample_desc"
                        android:textSize="@dimen/font_size_normal"/>
            </LinearLayout>

            <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/btn_three_point"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:layout_weight="1"
                          android:padding="10dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_advance_title"
                        android:textSize="@dimen/font_size_heading2"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="@string/calib_advance_desc"
                        android:textSize="@dimen/font_size_normal"/>
            </LinearLayout>

            <Button
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:id="@+id/btn_advance"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
